Get Makefile working

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <link rel="stylesheet" type="text/css" href="/build/style.f1a2e59360e6.css" />
 </head>
 <body></body>
-<script src="node_modules/babel-core/browser-polyfill.min.js"></script>
-<script src="node_modules/react/dist/react-with-addons.js"></script>
-<script src="node_modules/react-dom/dist/react-dom.min.js"></script>
-<script charset="utf-8" src="/src/jsonp.js"></script>
+<script src="/build/browser-polyfill.min.js"></script>
+<script src="/build/browser.min.js"></script>
+<script src="/build/react-with-addons.js"></script>
+<script src="/build/react-dom.min.js"></script>
+<script src="/build/jsonp.js"></script>
 <script src="/build/app.94eacf7560ce.js"></script>
 </html>
 
