--- a/dev.html
+++ b/dev.html
@@ -15,7 +15,7 @@
 <script src="node_modules/react/dist/react-with-addons.js"></script>
 <script src="node_modules/react-dom/dist/react-dom.min.js"></script>
 <script src="node_modules/less/dist/less.min.js"></script>
-<script charset="utf-8" src="/src/jsonp.js"></script>
+<script charset="utf-8" src="/vendor/jsonp.js"></script>
 
 
 <script type="text/ecmascript-6" charset="utf-8" src="/src/util.es"></script>
